@@ -200,6 +200,11 @@ bool IconDatabase::open(const String& databasePath)
     return isOpen();
 }
 
+bool IconDatabase::isOpen()
+{
+    return m_mainDB.isOpen() && m_privateBrowsingDB.isOpen();
+}
+
 void IconDatabase::close()
 {
     // This will close all the SQL statements and transactions we have open,
@@ -364,6 +369,11 @@ void IconDatabase::setPrivateBrowsingEnabled(bool flag)
         m_privateBrowsingDB.clearAllTables();
         m_currentDB = &m_mainDB;
     }
+}
+
+bool IconDatabase::isPrivateBrowsingEnabled() const
+{
+    return m_privateBrowsingEnabled;
 }
 
 Image* IconDatabase::iconForPageURL(const String& pageURL, const IntSize& size, bool cache)
@@ -916,6 +926,11 @@ void IconDatabase::setEnabled(bool enabled)
     if (!enabled && isOpen())
         close();
     m_isEnabled = enabled;
+}
+
+bool IconDatabase::enabled() const
+{
+     return m_isEnabled;
 }
 
 bool IconDatabase::imported()
