@@ -1,3 +1,11 @@
+2007-06-26  Adam Treat  <adam@staikos.net>
+
+        Reviewed by Adam Roben.
+
+        Make the SQLite icon database optional.
+
+        * wtf/Platform.h:
+
 2007-06-15  George Staikos  <staikos@kde.org>
 
         More missing files for Qt.
